--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -97,15 +97,18 @@ import template from "./diagrams/template.svg";
   - *Command & '-/+'* - на Mac
 - Для навигации используйте стрелки
 
-Сразу стоит сказать, что презентация развёрнута на надёжном хостинге (в конце будет дана ссылка и на её исходник), имеет
-высокую степень самодостаточности, поскольку сопровождается техническим текстом, поэтому для её восприятия наличие
-докладчика не требуется и записывать её на аудио/видео не обязательно.
-
+Сразу стоит сказать, что презентация создавалась как самодостаточная в том смысле, что для её нормального восприятия
+наличие докладчика не должно быть обязательным условием. С этой целью каждый слайд презентации снабжён достаточно
+подробными текстовыми комментариями в *заметках докладчика*, которые автор писал не столько для себя, сколько для
+заинтересованного читателя.
+ 
 Конечно, посмотреть докладчику прямо в глаза, и получить от него немедленный ответ на свой вопрос "в прямом эфире" в
 этом случае будет невозможно.
 
 Но зато заинтересованные слушатели впоследствии могут когда и сколько угодно пересматривать эту презентацию в удобном
 для них темпе.
+
+Кроме того, она развёрнута на надёжном хостинге и доступна онлайн в режиме 24*7. 
 
 </Notes>
 
@@ -597,6 +600,47 @@ Adapters*.
 
 ---
 
+<CodeSurferColumns themes={[myTheme, myTheme, myTheme]}>
+
+<Step>
+
+```ts 1,9:10,11:12,13[1] file=../../src/adapters/presenters/useIncrementPresenter.ts title="useIncrementPresenter"
+```
+
+```ts 1:11,13:14 file=../../src/domain/usecases/CounterIncrement.ts title="CounterIncrement"
+```
+
+```ts 1:2,5 file=../../src/adapters/gateways/CounterIncrementRestGateway.ts title="CounterIncrementRestGateway"
+```
+
+</Step>
+
+</CodeSurferColumns>
+
+
+<Notes>
+
+На слайде без изъятий представлены исходники трёх модулей стартера - представителей двух соседних архитектурных слоёв.
+Эти модули показаны вместе, чтобы легче было увидеть их взаимосвязь по зависимостям.
+
+В центральном столбце размещён *CounterIncrement* - модуль бизнес-логики из слоя *Use Cases*.
+
+По краям - модули из слоя адаптеров: слева - *useIncrementPresenter* - презентер для *React*, реализованный как
+*custom hook*. Справа - *CounterIncrementRestGateway* - шлюз доступа к внешнему сервису, сохраняющему и возвращающему
+текущее состояние счётчика.
+
+В начале каждого модуля находится самое главное: импорт, экспорт, интерфейсы и конструкторы. Ниже - реализация, но
+сейчас речь не о ней.  
+
+У модулей выделены только те строки, которые имеют отношение к соблюдению *Правила Зависимостей*. 
+
+Рассмотрим эти модули подробнее.
+
+...
+</Notes>
+
+---
+
 <CodeSurferColumns themes={[naiveTheme, myTheme]}>
 
 <Step>
@@ -659,17 +703,7 @@ Adapters*.
 
 <Image src={counterResetModule} style={{ width: '100vw', height: '100vh'}}/>
 
-```ts 1:3,5:7 file=../../src/domain/usecases/CounterReset.ts title="CounterReset"
-```
-
-</Step>
-
-
-<Step>
-
-<Image src={counterResetModuleImplementation} style={{ width: '100vw', height: '100vh'}}/>
-
-```ts 9:15 file=../../src/domain/usecases/CounterReset.ts title="CounterReset"
+```ts 1:3,5:10 file=../../src/domain/usecases/CounterReset.ts title="CounterReset"
 ```
 
 </Step>
@@ -678,74 +712,9 @@ Adapters*.
 
 
 <Notes>
-
-Как уже говорилось, стартер реализован на *TypeScript*.
-При этом важно отметить, что большая часть решений будет применима и в других языках, особенно в языках, поддерживающих
-статическую типизацию, таких как *Java*, *Kotlin*, *C#* и т.п.   
-
-В качестве примера приведём код *CounterReset* - модуля бизнес-логики - из слоя *usecases*.
-
-В начале модуля размещены определения *входного* и *выходного* интерфейсов модуля, названных, соответственно,
-*CounterResetIn* и *CounterResetOut*.
-
-Стоит отметить, что интерфейс *CounterResetOut* является *требуемым* (*required*) интерфейсом для адаптера из соседнего
-внешнего слоя.
-
 ...
 
-Далее - за объявлением интерфейсов размещается реализация входного интерфейса, по сути - реализация модуля.
-
-</Notes>
-
----
-
-<CodeSurferColumns themes={[myTheme, myTheme, myTheme]}>
-
-<Step>
-
-```ts 1,9:10,11:12,13[1] file=../../src/adapters/presenters/useIncrementPresenter.ts title="useIncrementPresenter"
-```
-
-```ts 1:11,13:14 file=../../src/domain/usecases/CounterIncrement.ts title="CounterIncrement"
-```
-
-```ts 1:2,5 file=../../src/adapters/gateways/CounterIncrementRestGateway.ts title="CounterIncrementRestGateway"
-```
-
-</Step>
-
-</CodeSurferColumns>
-
-
-<Notes>
-
-В качестве примера приведём код *CounterIncrement* - модуля бизнес-логики - из слоя *usecases*.
-
-На слайде представлены модули - представители разных архитектурных слоёв.
-Они показаны вместе, чтобы легче было увидеть их взаимосвязь по зависимостям.
-
-В начале каждого модуля с архитектурной точки зрения находится самое главное: интерфейсы, импорт, экспорт и конструкторы
-(так и должно быть, хотя *TypeScript* этого не требует). Ниже - реализация, но сейчас речь не о ней.  
-
-На слайде у модулей выделены только строки, имеющие отношение к соблюдению *Правила Зависимостей*. 
-
-В центральном столбце размещён *CounterIncrement* - модуль бизнес-логики из слоя *Use Cases*.
-
-По краям - модули из слоя адаптеров: слева - *useIncrementPresenter* - презентер для *React*, реализованный как
-*custom hook*. Справа - *CounterIncrementRestGateway* - шлюз доступа к внешнему сервису, сохраняющему и возвращающему
-текущее состояние счётчика.
-
-...
-
-В начале модуля размещены определения *входного* и *выходного* интерфейсов модуля, названных, соответственно,
-*CounterIncrementIn* и *CounterIncrementOut*.
-
-Стоит отметить, что интерфейс *CounterIncrementOut* является *требуемым* (*required*) интерфейсом для адаптера из соседнего
-внешнего слоя.
-
-...
-
-Далее - за объявлением интерфейсов размещается реализация входного интерфейса, по сути - реализация модуля.
+То же самое - для модуля *CounterReset*
 
 </Notes>
 
