--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -625,18 +625,35 @@ Adapters*.
 
 В центральном столбце размещён *CounterIncrement* - модуль бизнес-логики из слоя *Use Cases*.
 
-По краям - модули из слоя адаптеров: слева - *useIncrementPresenter* - презентер для *React*, реализованный как
-*custom hook*. Справа - *CounterIncrementRestGateway* - шлюз доступа к внешнему сервису, сохраняющему и возвращающему
-текущее состояние счётчика.
+По краям - модули из одного и того же слоя - слоя адаптеров: слева - *useIncrementPresenter* - презентер для *React*,
+реализованный как *custom hook*. Справа - *CounterIncrementRestGateway* - шлюз доступа к внешнему сервису, сохраняющему
+и возвращающему текущее состояние счётчика.
 
-В начале каждого модуля находится самое главное: импорт, экспорт, интерфейсы и конструкторы. Ниже - реализация, но
-сейчас речь не о ней.  
+В начале каждого модуля находится самое главное: импорт, экспорт, интерфейсы и конструкторы.
 
-У модулей выделены только те строки, которые имеют отношение к соблюдению *Правила Зависимостей*. 
+У модулей выделены только строки, имеющие отношение к соблюдению *Правила Зависимостей*, которое, в свою очередь,
+обеспечивается правильной расстановкой операторов *export* и *import*.
 
-Рассмотрим эти модули подробнее.
+</Notes>
 
-...
+---
+
+<p style="font-size: 70px; text-align:left; padding:100px;">
+    <i>Модуль архитектурного слоя не должен ничего импортировать из модулей внешних слоёв. <br/> При этом он может импортировать
+       из модулей своего слоя и из модулей внутренних по отношению к нему слоёв.</i>
+</p>
+
+
+<Notes>
+
+*Правило Зависимостей*, переведённое на язык с поддержкой модульности, каким, конечно, является и *TypeScript*, звучит
+так:
+
+*Модуль архитектурного слоя не должен ничего импортировать из модулей внешних слоёв. При этом он может импортировать
+из модулей своего слоя и из модулей внутренних по отношению к нему слоёв.*
+
+Рассмотрим вышеупомянутые модули с этой точки зрения.
+
 </Notes>
 
 ---
@@ -675,12 +692,12 @@ Adapters*.
 
 
 <Notes>
+...
 
-Как уже говорилось, стартер реализован на *TypeScript*.
-При этом важно отметить, что большая часть решений будет применима и в других языках, поддерживающих статическую
-типизацию, таких как *Java*, *Kotlin*, *C#* и т.п.   
+Начнём с бизнес-логики. Рассмотрим модуль *CounterIncrement*.
 
-В качестве примера приведём код *CounterIncrement* - модуля бизнес-логики - из слоя *usecases*.
+Обратите внимание на первую строку - она содержит импорт класса *Counter* из слоя сущностей.
+С точки зрения 
 
 В начале модуля размещены определения *входного* и *выходного* интерфейсов модуля, названных, соответственно,
 *CounterIncrementIn* и *CounterIncrementOut*.
