docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -639,18 +639,19 @@ Adapters*.
 ---
 
 <p style="font-size: 70px; text-align:left; padding:100px;">
-    <i>Модуль архитектурного слоя не должен ничего импортировать из модулей внешних слоёв. <br/> При этом он может импортировать
-       из модулей своего слоя и из модулей внутренних по отношению к нему слоёв.</i>
+    <i>Модуль архитектурного слоя не должен ничего импортировать из модулей внешних по отношению к нему слоёв.
+    <br/>
+    При этом он может импортировать из модулей своего слоя и из модулей внутренних слоёв.</i>
 </p>
 
 
 <Notes>
 
-*Правило Зависимостей*, переведённое на язык с поддержкой модульности, каким, конечно, является и *TypeScript*, звучит
-так:
+*Правило Зависимостей*, переведённое на язык, поддерживающий модульность, каким, конечно, является и *TypeScript*,
+звучит следующим образом:
 
-*Модуль архитектурного слоя не должен ничего импортировать из модулей внешних слоёв. При этом он может импортировать
-из модулей своего слоя и из модулей внутренних по отношению к нему слоёв.*
+*Модуль архитектурного слоя не должен ничего импортировать из модулей внешних по отношению к нему слоёв. При этом он
+может импортировать из модулей своего слоя и из модулей внутренних слоёв.*
 
 Рассмотрим вышеупомянутые модули с этой точки зрения.
 
