docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -639,9 +639,10 @@ Adapters*.
 ---
 
 <p style="font-size: 70px; text-align:left; padding:100px;">
-    <i>Модуль архитектурного слоя не должен ничего импортировать из модулей внешних по отношению к нему слоёв.
+    Модуль архитектурного слоя не должен ничего импортировать из модулей внешних по отношению к нему слоёв.
     <br/>
-    При этом он может импортировать из модулей своего слоя и из модулей внутренних слоёв.</i>
+    При этом он может импортировать из модулей своего слоя и из модулей внутренних слоёв.
+    <p style="font-size: 50px; text-align:right; color:#addb67;"><i>Чистая Архитектура - Правило Зависимостей</i></p>
 </p>
 
 
@@ -693,7 +694,6 @@ Adapters*.
 
 
 <Notes>
-...
 
 Начнём с бизнес-логики. Рассмотрим модуль *CounterIncrement*.
 
