docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -629,7 +629,7 @@ Adapters*.
 реализованный как *custom hook*. Справа - *CounterIncrementRestGateway* - шлюз доступа к внешнему сервису, сохраняющему
 и возвращающему текущее состояние счётчика.
 
-В начале каждого модуля находится самое главное: импорт, экспорт, интерфейсы и конструкторы.
+В начале каждого модуля находится самое главное: импорт, экспорт, интерфейсы и конструктор.
 
 У модулей выделены только строки, имеющие отношение к соблюдению *Правила Зависимостей*, которое, в свою очередь,
 обеспечивается правильной расстановкой операторов *export* и *import*.
@@ -641,7 +641,7 @@ Adapters*.
 <p style="font-size: 70px; text-align:left; padding:100px;">
     Модуль архитектурного слоя не должен ничего импортировать из модулей внешних по отношению к нему слоёв.
     <br/>
-    При этом он может импортировать из модулей своего слоя и из модулей внутренних слоёв.
+    При этом он импортирует из модулей внутренних слоёв и может импортировать из модулей своего слоя.
     <p style="font-size: 50px; text-align:right; color:#addb67;"><i>Чистая Архитектура - Правило Зависимостей</i></p>
 </p>
 
@@ -652,7 +652,7 @@ Adapters*.
 звучит следующим образом:
 
 *Модуль архитектурного слоя не должен ничего импортировать из модулей внешних по отношению к нему слоёв. При этом он
-может импортировать из модулей своего слоя и из модулей внутренних слоёв.*
+импортирует из модулей внутренних слоёв и может импортировать из модулей своего слоя.*
 
 Рассмотрим вышеупомянутые модули с этой точки зрения.
 
@@ -695,86 +695,29 @@ Adapters*.
 
 <Notes>
 
-Начнём с бизнес-логики. Рассмотрим модуль *CounterIncrement*.
+Начнём с бизнес-логики. Рассмотрим модуль *CounterIncrement*, находящийся в директории-слое *usecases*.
 
-Обратите внимание на первую строку - она содержит импорт класса *Counter* из слоя сущностей.
-С точки зрения 
+Обратите внимание на первую строку - она содержит импорт класса *Counter* из слоя *entities*.
+С точки зрения *Правила Зависимостей* всё правильно: внешний слой *usecases* импортирует из внутреннего - *entities*. 
 
-В начале модуля размещены определения *входного* и *выходного* интерфейсов модуля, названных, соответственно,
+->
+
+В начале модуля размещены определения его *входного* и *выходного* интерфейсов, названных, соответственно,
 *CounterIncrementIn* и *CounterIncrementOut*.
 
-Стоит отметить, что интерфейс *CounterIncrementOut* является *требуемым* (*required*) интерфейсом для адаптера из соседнего
-внешнего слоя.
+Оба этих интерфейса экспортируются, чтобы быть импортированы из слоя адаптеров - *adapters*.
 
-...
+Стоит отметить, что интерфейс *CounterIncrementOut* является *требуемым* (*required*) интерфейсом для адаптера-шлюза
+доступа к внешнему сервису.
 
-Далее - за объявлением интерфейсов размещается реализация входного интерфейса, по сути - реализация модуля.
+->
 
-</Notes>
+Далее размещается реализация входного интерфейса, по сути - реализация модуля.
 
-
----
-
-<CodeSurferColumns themes={[naiveTheme, myTheme]}>
-
-<Step>
-
-<Image src={counterResetModule} style={{ width: '100vw', height: '100vh'}}/>
-
-```ts 1:3,5:10 file=../../src/domain/usecases/CounterReset.ts title="CounterReset"
-```
-
-</Step>
-
-</CodeSurferColumns>
-
-
-<Notes>
-...
-
-То же самое - для модуля *CounterReset*
+Но для *Правила Зависимостей* реализации не имеют значения, поэтому здесь их не рассматриваем.
 
 </Notes>
 
----
-
-<CodeSurferColumns themes={[myTheme, myTheme, myTheme]}>
-
-<Step>
-
-```ts 1,3:6 file=../../src/adapters/presenters/useResetPresenter.ts title="useResetPresenter"
-```
-
-```ts 1:3,5:10 file=../../src/domain/usecases/CounterReset.ts title="CounterReset"
-```
-
-```ts 1,4 file=../../src/adapters/gateways/CounterResetRestGateway.ts title="CounterResetRestGateway"
-```
-
-</Step>
-
-</CodeSurferColumns>
-
-
-<Notes>
-
-В качестве примера приведём код *CounterReset* - модуля бизнес-логики - из слоя *usecases*.
-
-В начале модуля размещены определения *входного* и *выходного* интерфейсов модуля, названных, соответственно,
-*CounterResetIn* и *CounterResetOut*.
-
-Стоит отметить, что интерфейс *CounterResetOut* является *требуемым* (*required*) интерфейсом для адаптера из соседнего
-внешнего слоя.
-
-...
-
-Далее - за объявлением интерфейсов размещается реализация входного интерфейса, по сути - реализация модуля.
-
-</Notes>
-
----
-
-# Нужен слой адаптера
 
 ---
 
@@ -941,5 +884,64 @@ Adapters*.
 <Notes>
 
 Что общего в этих изображениях ?
+
+</Notes>
+
+---
+
+<CodeSurferColumns themes={[naiveTheme, myTheme]}>
+
+<Step>
+
+<Image src={counterResetModule} style={{ width: '100vw', height: '100vh'}}/>
+
+```ts 1:3,5:10 file=../../src/domain/usecases/CounterReset.ts title="CounterReset"
+```
+
+</Step>
+
+</CodeSurferColumns>
+
+
+<Notes>
+...
+
+То же самое - для модуля *CounterReset*
+
+</Notes>
+
+---
+
+<CodeSurferColumns themes={[myTheme, myTheme, myTheme]}>
+
+<Step>
+
+```ts 1,3:6 file=../../src/adapters/presenters/useResetPresenter.ts title="useResetPresenter"
+```
+
+```ts 1:3,5:10 file=../../src/domain/usecases/CounterReset.ts title="CounterReset"
+```
+
+```ts 1,4 file=../../src/adapters/gateways/CounterResetRestGateway.ts title="CounterResetRestGateway"
+```
+
+</Step>
+
+</CodeSurferColumns>
+
+
+<Notes>
+
+В качестве примера приведём код *CounterReset* - модуля бизнес-логики - из слоя *usecases*.
+
+В начале модуля размещены определения *входного* и *выходного* интерфейсов модуля, названных, соответственно,
+*CounterResetIn* и *CounterResetOut*.
+
+Стоит отметить, что интерфейс *CounterResetOut* является *требуемым* (*required*) интерфейсом для адаптера из соседнего
+внешнего слоя.
+
+...
+
+Далее - за объявлением интерфейсов размещается реализация входного интерфейса, по сути - реализация модуля.
 
 </Notes>
