docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -695,7 +695,7 @@ Adapters*.
 
 <Notes>
 
-Начнём с бизнес-логики. Рассмотрим модуль *CounterIncrement*, находящийся в директории-слое *usecases*.
+Рассмотрим модуль *CounterIncrement*, находящийся в директории-слое *usecases*.
 
 Обратите внимание на первую строку - она содержит импорт класса *Counter* из слоя *entities*.
 С точки зрения *Правила Зависимостей* всё правильно: внешний слой *usecases* импортирует из внутреннего - *entities*. 
