docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -165,6 +165,8 @@ import template from "./diagrams/template.svg";
 
 ## Ради чего всё ?
 
+## Надолго ли это ?
+
 ## Производительность ?
 
 *Чистая Архитектура* не является серебряной пулей, она вряд ли подойдёт любителям хакатонов и рыцарям наколенноого
