--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -169,9 +169,11 @@ import template from "./diagrams/template.svg";
 
 ## Производительность ?
 
-Сравнивать эффективность *Чистой Архитектуры* и наколенной разработки всё равно, что сравнивать скорость поезда и 
-велосипеда, пусть даже гоночного. При старте с места велосипед выиграет на 100 метрах, может и на 200, может и на 1000.
-А на 100 км ? На 1000 км ?
+Сравнивать эффективность *Чистой Архитектуры* и наколенной разработки всё равно что сравнивать скорость спринтера и
+стайера, а точнее - велосипеда и поезда.
+
+При старте с места велосипед, конечно, выиграет на 100 метрах, может и на 200, может и на 1000. А на 100 км ? На 1000
+км ? На 10000 ?
 
 *Чистая Архитектура* не является серебряной пулей, она вряд ли подойдёт любителям хакатонов и рыцарям наколенноого
 кодинга.
