docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -76,16 +76,14 @@ import template from "./diagrams/template.svg";
 ---
 
 <p style="font-size: 80px; text-align:center;">
-Первое, что нужно сделать тому, кто собирается САМОСТОЯТЕЛЬНО смотреть презентацию из браузера, это включить режим
-<i>Заметки докладчика</i>:
+Для самостоятельного просмотра презентации Включите режим <i>Заметки докладчика</i>:
 </p>
-<p style="font-size: 80px; padding-bottom:140px;">
+<p style="font-size: 80px; padding-bottom:40px;">
     <ul>
         <li><i>Alt+P</i> - на Windows</li>
         <li><i>Option+P</i> - на Mac</li>
     </ul>
 </p>
-
 
 <Notes>
 
@@ -98,18 +96,15 @@ import template from "./diagrams/template.svg";
   - *Command & '-/+'* - на Mac
 - Для навигации используйте стрелки
 
-Сразу стоит сказать, что презентация создавалась как самодостаточная в том смысле, что для её нормального восприятия
-наличие докладчика не должно быть обязательным условием. С этой целью каждый слайд презентации снабжён достаточно
-подробными текстовыми комментариями в *заметках докладчика*, которые автор писал не столько для себя, сколько для
-заинтересованного читателя.
- 
-Конечно, посмотреть докладчику прямо в глаза, и получить от него немедленный ответ на свой вопрос "в прямом эфире" в
-этом случае будет невозможно.
+Сразу стоит сказать, что эта презентация продолжает эксперименты по созданию самодостаточного информационного продукта,
+своего рода презентации-статьи, когда она изначально создаётся для полноценного восприятия не только при озвучивании
+докладчиком, но и без него. Для этого слайды сопровождаются достаточно подробными *заметками докладчика*, адресованными
+не столько докладчику, сколько заинтересованному читателю.
 
-Но зато заинтересованные слушатели впоследствии могут когда и сколько угодно пересматривать эту презентацию в удобном
-для них темпе.
+Презентация развёрнута на надёжном хостинге и доступна онлайн в режиме 24*7. Тот, кому она покажется интересной, сможет
+её пересмотреть в удобном для себя темпе когда угодно и сколько угодно.
 
-Кроме того, она развёрнута на надёжном хостинге и доступна онлайн в режиме 24*7. 
+Насколько это получилось, судить вам.
 
 </Notes>
 
@@ -131,7 +126,7 @@ import template from "./diagrams/template.svg";
 отдельного рассмотрения.
  
 В этой презентации главное внимание будет уделено *Правилу зависимостей* *Чистой Архитектуры*, о том, как это правило
-может быть представлены в программном коде, в данном случае, в коде *TypeScript*.. 
+может быть представлены в программном коде, в данном случае - на *TypeScript*. 
 
 </Notes>
 
@@ -149,9 +144,10 @@ import template from "./diagrams/template.svg";
 Архитектурой* и очень желательно знакомство с материалом, изложенным в презентации [*О Принципе Инверсии
 Зависимостей*](https://csb-9kg5y-8d0n41fyp.now.sh).
 
-Ну а для тех, кому эта тема совсем незнакома, сформулируем кратко: принципы *Чистой Архитектуры* направлены на
-обеспечение долгого и устойчивого развития программного продукта, на увеличение его продолжительности жизни, попросту -
-живучести.
+Ну а для тех, кому эта тема совсем незнакома, сформулируем кратко, немного перефразировав Википедию:
+
+*Использование принципов Чистой Архитектуры способствует созданию такой программной системы, которую будет легко
+поддерживать и расширять в течение долгого времени.*
 
 Притом, что пользовательский интерфейс стартера сделан на *React*, для восприятия этой презентации он не потребуется.   
 
