docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -298,22 +298,6 @@ Substitution Principle*, для применения которого необх
 
 ---
 
-<p style="font-size: 130px; text-align:center; padding-bottom:140px;">
-Frontend и 
-<br/> 
-Чистая Архитектура
-</p>
-
-<Notes>
-
-Вставка отсюда: [Clean Architecture on Frontend presentation](https://github.com/softspiders/ca-on-frontend)
-
-Отдельная тема, она пока не готова, поэтому пока пропускаем.
-
-</Notes>
-
----
-
 # Словарь используемых терминов
 
 <Notes>
@@ -420,13 +404,16 @@ Adapters*.
 ---
 
 <p style="font-size: 130px; text-align:center; padding-bottom:140px;">
-Лучше один раз увидеть
+Правило зависимостей
  </p>
 
 <Notes>
 
 Дальнейшее изложение посвящено разбору стартера, а именно тому, как в нём обеспечивается соблюдение *Правила
 Зависимостей*.
+
+Наверное, здесь стоит сделать небольшое отступление для того, чтобы кому-то напомнить, кому-то пояснить, в чём состоит
+*Правило Зависимостей*, и для чего оно нужно.
 
 Начнём с UML-диаграмм.
 
