docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -32,6 +32,8 @@ import legoModules from "./diagrams/legoModules.png";
  
 import climbersBunch2 from "./diagrams/climbersBunch2.jpg";
 
+import caLayersUsual from "./diagrams/caLayersUsual.svg";
+
 import packagesClient0 from "./diagrams/packagesClient0.svg";
 import packagesClient1 from "./diagrams/packagesClient1.svg";
 import packagesClient from "./diagrams/packagesClient.svg";
@@ -409,11 +411,38 @@ Adapters*.
 
 <Notes>
 
-Дальнейшее изложение посвящено разбору стартера, а именно тому, как в нём обеспечивается соблюдение *Правила
-Зависимостей*.
-
 Наверное, здесь стоит сделать небольшое отступление для того, чтобы кому-то напомнить, кому-то пояснить, в чём состоит
 *Правило Зависимостей*, и для чего оно нужно.
+
+</Notes>
+
+---
+
+<Image src={caLayersUsual} style={{ width: '102vw', height: '100vh'}}/>
+
+<Notes>
+
+В *Чистой Архитектуре* *Правило Зависимостей* занимает, пожалуй, центральное место.
+
+Его суть очень проста, она состоит в следующем: более значимые свойства системы не должны зависеть от менее значимых.
+
+Именно это правило в наибольшей степени придаёт системе живучесть и устойчивость к изменениям в долгосрочном периоде.
+При этом соотношения значимости свойств в каждой конкретной системе могут быть свои, и в первую очередь, разумеется, эти
+соотношения должны отвечать задачам, которую эта система решает.
+
+Правило зависимостей заставляет разработчика с самого начала думать о важных вещах: о том, где и как провести границу
+между сущностями предметной области и сценариями бизнес-логики, между бизнес-логикой продукта и остальной так называемой
+инфраструктурой, которая как раз и состоит из библиотек, фреймворков и баз данных.
+
+</Notes>
+
+---
+# Наконец, переходим к стартеру
+
+<Notes>
+
+Дальнейшее изложение посвящено разбору стартера, а именно тому, как в нём обеспечивается соблюдение *Правила
+Зависимостей*.
 
 Начнём с UML-диаграмм.
 
