docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -427,6 +427,21 @@ Adapters*.
 Его суть очень проста, она состоит в следующем: более значимые свойства системы не должны зависеть от менее значимых.
 
 Именно это правило в наибольшей степени придаёт системе живучесть и устойчивость к изменениям в долгосрочном периоде.
+
+На диаграммах, *Правило* обычно изображается стрелками, показывающими направление зависимостей: от инфраструктуры - к
+бизнес-логике, от периферии - к центру. 
+
+...
+</Notes>
+
+
+---
+
+<Image src={caLayersUsual} style={{ width: '102vw', height: '100vh'}}/>
+
+<Notes>
+...
+
 При этом соотношения значимости свойств в каждой конкретной системе могут быть свои, и в первую очередь, разумеется, эти
 соотношения должны отвечать задачам, которую эта система решает.
 
