docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -424,16 +424,30 @@ Adapters*.
 
 В *Чистой Архитектуре* *Правило Зависимостей* занимает, пожалуй, центральное место.
 
-Его суть очень проста, она состоит в следующем: более значимые свойства системы не должны зависеть от менее значимых.
-
-Именно это правило в наибольшей степени придаёт системе живучесть и устойчивость к изменениям в долгосрочном периоде.
-
-На диаграммах, *Правило* обычно изображается стрелками, показывающими направление зависимостей: от инфраструктуры - к
-бизнес-логике, от периферии - к центру. 
+На диаграммах оно обычно изображается стрелками, показывающими направление зависимостей: от инфраструктурной периферии -
+к смысловому центру, которым всегда является бизнес-логика. 
 
 ...
 </Notes>
 
+
+---
+
+<p style="font-size: 100px; text-align:left; padding:100px;">
+    Более значимые свойства системы не должны зависеть от менее значимых.
+</p>
+
+<Notes>
+...
+
+Его суть очень проста, она состоит в следующем:
+
+*Более значимые свойства системы не должны зависеть от менее значимых.*
+
+Именно это правило в наибольшей степени придаёт системе живучесть и устойчивость к изменениям в долгосрочном периоде.
+
+...
+</Notes>
 
 ---
 
@@ -691,7 +705,6 @@ Adapters*.
     При этом он импортирует из модулей внутренних слоёв и может импортировать из модулей своего слоя.
     <p style="font-size: 50px; text-align:right; color:#addb67;"><i>Чистая Архитектура - Правило Зависимостей</i></p>
 </p>
-
 
 <Notes>
 
