docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -33,6 +33,7 @@ import legoModules from "./diagrams/legoModules.png";
 import climbersBunch2 from "./diagrams/climbersBunch2.jpg";
 
 import caLayersUsual from "./diagrams/caLayersUsual.svg";
+import caLayersAbstract from "./diagrams/caLayersAbstract.svg";
 
 import packagesClient0 from "./diagrams/packagesClient0.svg";
 import packagesClient1 from "./diagrams/packagesClient1.svg";
@@ -411,8 +412,8 @@ Adapters*.
 
 <Notes>
 
-Наверное, здесь стоит сделать небольшое отступление для того, чтобы кому-то напомнить, кому-то пояснить, в чём состоит
-*Правило Зависимостей*, и для чего оно нужно.
+На этом месте стоит сделать небольшое отступление для того, чтобы напомнить, в чём состоит *Правило Зависимостей*, и для
+чего оно нужно.
 
 </Notes>
 
@@ -440,24 +441,33 @@ Adapters*.
 <Notes>
 ...
 
-Его суть очень проста, она состоит в следующем:
+Суть *Правила Зависимостей* очень проста, она состоит в следующем:
 
 *Более значимые свойства системы не должны зависеть от менее значимых.*
 
+Во избежание недоразумений необходимо уточнить, что под зависимостями в данном случае подразумеваются только
+*зависимости времени разработки* - *design-time*.
+
 Именно это правило в наибольшей степени придаёт системе живучесть и устойчивость к изменениям в долгосрочном периоде.
+
+Возможно, кто-то скажет, что правило очевидно, банально и т.п. Но практика показывает, что это не так: его постоянное
+нарушение является нашей повседневной реальностью.
 
 ...
 </Notes>
 
 ---
 
-<Image src={caLayersUsual} style={{ width: '102vw', height: '100vh'}}/>
+<Image src={caLayersAbstract} style={{ width: '102vw', height: '100vh'}}/>
 
 <Notes>
 ...
 
-При этом соотношения значимости свойств в каждой конкретной системе могут быть свои, и в первую очередь, разумеется, эти
-соотношения должны отвечать задачам, которую эта система решает.
+При этом свойства, соотношения значимости этих свойств в каждой конкретной системе могут быть свои, и, в первую очередь,
+эти соотношения должны отвечать задачам, которую эта система решает.
+
+Неизменным остаётся только одно, как уже было сказано: *Более значимые свойства системы не должны зависеть от менее
+значимых.*
 
 Правило зависимостей заставляет разработчика с самого начала думать о важных вещах: о том, где и как провести границу
 между сущностями предметной области и сценариями бизнес-логики, между бизнес-логикой продукта и остальной так называемой
