docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -34,6 +34,7 @@ import climbersBunch2 from "./diagrams/climbersBunch2.jpg";
 
 import caLayersUsual from "./diagrams/caLayersUsual.svg";
 import caLayersAbstract from "./diagrams/caLayersAbstract.svg";
+import caLayersAbstract1 from "./diagrams/caLayersAbstract1.svg";
 
 import packagesClient0 from "./diagrams/packagesClient0.svg";
 import packagesClient1 from "./diagrams/packagesClient1.svg";
@@ -99,10 +100,12 @@ import template from "./diagrams/template.svg";
   - *Command & '-/+'* - на Mac
 - Для навигации используйте стрелки
 
-Сразу стоит сказать, что эта презентация продолжает эксперименты по созданию самодостаточного информационного продукта,
-своего рода презентации-статьи, когда она изначально создаётся для полноценного восприятия не только при озвучивании
-докладчиком, но и без него. Для этого слайды сопровождаются достаточно подробными *заметками докладчика*, адресованными
-не столько докладчику, сколько заинтересованному читателю.
+При работе над этой презентацией продолжались эксперименты по созданию самодостаточного информационного продукта, своего
+рода презентации-статьи, когда она изначально создаётся не только для озвучивания докладчиком, но и для полноценного
+восприятия - при индивидуальном просмотре-чтении.
+
+Чтобы это стало возможным, слайды сопровождаются достаточно подробными *заметками докладчика*, адресованными не столько
+докладчику, сколько заинтересованному читателю.
 
 Презентация развёрнута на надёжном хостинге и доступна онлайн в режиме 24*7. Тот, кому она покажется интересной, сможет
 её пересмотреть в удобном для себя темпе когда угодно и сколько угодно.
@@ -124,11 +127,11 @@ import template from "./diagrams/template.svg";
 Это первая из серии презентаций о стартере для клиентских приложений, разрабатываемых на принципах *Чистой Архитектуры*.
 
 Предметная область и, соответственно, бизнес-логика стартера предельно минималистичны - это обычный счётчик с функциями
-инкремента и сброса. Но при всей этой минималистичности стартер представлен fullstack-решением, в котором клиентская
+инкремента и сброса. Но при всей своей минималистичности стартер представлен fullstack-решением, в котором клиентская
 часть взаимодействует с persistence-сервисом (назовём это так) по REST API и имеет несколько аспектов, требующих
 отдельного рассмотрения.
  
-В этой презентации главное внимание будет уделено *Правилу зависимостей* *Чистой Архитектуры*, о том, как это правило
+В этой презентации главное внимание уделяется *Правилу Зависимостей* *Чистой Архитектуры*, в частности, тому, как оно
 может быть представлены в программном коде, в данном случае - на *TypeScript*. 
 
 </Notes>
@@ -143,11 +146,15 @@ import template from "./diagrams/template.svg";
 
 На кого рассчитана презентация, какова её целевая аудитория ?
 
-От аудитории желательно присутствие хотя бы минимального предварительного понимания существа проблем, решаемых *Чистой
-Архитектурой* и очень желательно знакомство с материалом, изложенным в презентации [*О Принципе Инверсии
+От аудитории не требуется наличия предварительных знаний ни о *Чистой Архитектуре*, ни о *Правиле Зависимостей*. 
+
+Хотя, конечно, присутствие хотя бы минимального предварительного понимания существа проблем, решаемых *Чистой
+Архитектурой* будет желательным.
+
+Также будет желательным и знакомство с материалом, изложенным в презентации [*О Принципе Инверсии
 Зависимостей*](https://csb-9kg5y-8d0n41fyp.now.sh).
 
-Ну а для тех, кому эта тема совсем незнакома, сформулируем кратко, немного перефразировав Википедию:
+Для тех, кому тема совсем незнакома, сформулируем кратко, немного перефразировав Википедию:
 
 *Использование принципов Чистой Архитектуры способствует созданию такой программной системы, которую будет легко
 поддерживать и расширять в течение долгого времени.*
@@ -426,11 +433,12 @@ Adapters*.
 В *Чистой Архитектуре* *Правило Зависимостей* занимает, пожалуй, центральное место.
 
 На диаграммах оно обычно изображается стрелками, показывающими направление зависимостей: от инфраструктурной периферии -
-к смысловому центру, которым всегда является бизнес-логика. 
+к смысловому центру, которым всегда является бизнес-логика (на картинке - *Entities* + *Use Cases*). 
 
-...
+Во избежание недоразумений необходимо уточнить, что под зависимостями в данном случае подразумеваются только
+*зависимости времени разработки* - *design-time*-зависимости.
+
 </Notes>
-
 
 ---
 
@@ -439,18 +447,14 @@ Adapters*.
 </p>
 
 <Notes>
-...
 
 Суть *Правила Зависимостей* очень проста, она состоит в следующем:
 
 *Более значимые свойства системы не должны зависеть от менее значимых.*
 
-Во избежание недоразумений необходимо уточнить, что под зависимостями в данном случае подразумеваются только
-*зависимости времени разработки* - *design-time*.
-
 Именно это правило в наибольшей степени придаёт системе живучесть и устойчивость к изменениям в долгосрочном периоде.
 
-Возможно, кто-то скажет, что правило очевидно, банально и т.п. Но практика показывает, что это не так: его постоянное
+Возможно, кто-то скажет, что правило очевидно, банально и т.п. Но практика показывает, что это не так - его постоянное
 нарушение является нашей повседневной реальностью.
 
 ...
@@ -468,6 +472,16 @@ Adapters*.
 
 Неизменным остаётся только одно, как уже было сказано: *Более значимые свойства системы не должны зависеть от менее
 значимых.*
+
+...
+</Notes>
+
+---
+
+<Image src={caLayersAbstract1} style={{ width: '102vw', height: '100vh'}}/>
+
+<Notes>
+...
 
 Правило зависимостей заставляет разработчика с самого начала думать о важных вещах: о том, где и как провести границу
 между сущностями предметной области и сценариями бизнес-логики, между бизнес-логикой продукта и остальной так называемой
