docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -148,10 +148,10 @@ import template from "./diagrams/template.svg";
 
 От аудитории не требуется наличия предварительных знаний ни о *Чистой Архитектуре*, ни о *Правиле Зависимостей*. 
 
-Хотя, конечно, присутствие хотя бы минимального предварительного понимания существа проблем, решаемых *Чистой
-Архитектурой* будет желательным.
+Хотя, конечно, присутствие хотя бы минимального понимания существа проблем, решаемых *Чистой Архитектурой* будет
+полезным.
 
-Также будет желательным и знакомство с материалом, изложенным в презентации [*О Принципе Инверсии
+Полезным будет также и знакомство с материалом, изложенным в презентации [*О Принципе Инверсии
 Зависимостей*](https://csb-9kg5y-8d0n41fyp.now.sh).
 
 Для тех, кому тема совсем незнакома, сформулируем кратко, немного перефразировав Википедию:
