docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -175,6 +175,12 @@ import template from "./diagrams/template.svg";
 
 ## Производительность ?
 
+### Накладные расходы ?
+
+## Frontend ?
+
+<Notes>
+
 Сравнивать эффективность *Чистой Архитектуры* и наколенной разработки всё равно что сравнивать скорость спринтера и
 стайера, а точнее - велосипеда и поезда.
 
@@ -183,14 +189,13 @@ import template from "./diagrams/template.svg";
 
 *Чистая Архитектура* не является серебряной пулей, она вряд ли подойдёт любителям хакатонов и рыцарям наколенноого
 кодинга.
-Она для тех, кто играет в долгую.
+Она для тех, кто собирается "играть в долгую".
 А при игре в долгую всё становится на свои места. Чем больше функциональность разрастается и приобретает серьёзный
 масштаб, тем больше *Чистая Архитектура* выигрывает не только в эффективности разработки, но также и в эффективности
 времени выполнения программы, причём и по памяти, и по скорости. И особенно на фронтенде.
 
-### Накладные расходы ?
+</Notes>
 
-## Frontend ?
 
 ---
 
