--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -159,7 +159,8 @@ import template from "./diagrams/template.svg";
 *Использование принципов Чистой Архитектуры способствует созданию такой программной системы, которую будет легко
 поддерживать и расширять в течение долгого времени.*
 
-Притом, что пользовательский интерфейс стартера сделан на *React*, для восприятия этой презентации он не потребуется.   
+Пользовательский интерфейс стартера сделан на *React*, но понимания того, о чём здесь будет говориться, знания *React*
+не потребуется.   
 
 </Notes>
 
