docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -168,7 +168,9 @@ import template from "./diagrams/template.svg";
 
 # Mini FAQ
 
-Сразу хочу предвосхитить тревожные ожидания и успокоить
+У кого-то уже сейчас могут присутствовать  
+
+Сразу хочу снять возможнные тревожные ожидания и успокоить тех, у кого
 
 ## Ради чего всё ?
 
@@ -319,8 +321,8 @@ Substitution Principle*, для применения которого необх
 <Notes>
 
 Притом что и в этой презентации, и в коде самого стартера используются термины, вполне традиционные для *Чистой
-Архитектуры*, эти термины будут непривычны для тех, кто только начинает знакомиться с этой областью, поэтому они
-нуждаются в отдельных пояснениях.
+Архитектуры*, они будут непривычны для тех, кто только начинает знакомиться с этой областью, поэтому они нуждаются в
+отдельных пояснениях.
 
 Прекрасный разбор терминов и понятий *Чистой Архитектуры*, разрешающий ряд недоразумений, сделан в работе [*Заблуждения
 Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
