docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -543,8 +543,12 @@ Adapters*.
 
 Именно это правило в наибольшей степени придаёт системе живучесть и устойчивость к изменениям в долгосрочном периоде.
 
-Возможно, найдётся кто-то, кто скажет, что *Правило Зависимостей* очевидно, банально и т.п. - такие всегда находятся.
-Но практика показывает, что это не так - его постоянное нарушение является нашей повседневной реальностью.
+Возможно, кто-то скажет, что *Правило Зависимостей*, мол, очевидно, банально, что он и так всегда его соблюдал - такие
+всегда находятся, кстати, именно среди хороших программистов.
+
+Но практика показывает, что на самом деле это не так, таких опытных разработчиков с хорошей интуицией - единицы, а
+постоянное нарушение этого правила, низкая культура работы с зависимостями пока ещё является нашей повседневной
+реальностью.
 
 ...
 </Notes>
