docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -550,7 +550,6 @@ Adapters*.
 постоянное нарушение этого правила, низкая культура работы с зависимостями пока ещё является нашей повседневной
 реальностью.
 
-...
 </Notes>
 
 ---
@@ -558,10 +557,9 @@ Adapters*.
 <Image src={caLayersAbstract1} style={{ width: '102vw', height: '100vh'}}/>
 
 <Notes>
-...
 
-Названия и число слоёв никак не регламентированы *Чистой Архитектурой*. На оригинальной диаграмме показа просто самый
-типовой пример, который и нужно воспринимать именно как пример, не более того.
+*Чистая Архитектура* никак не регламентирует ни названия, ни число слоёв. На оригинальной диаграмме показан просто самый
+типовой пример, который и нужно воспринимать как пример, не более того.
 
 Но в любой системе всегда есть две составляющие: модель предметной области - *Domain* и  инфраструктура -
 *Infrastructure*. 
@@ -588,7 +586,6 @@ Adapters*.
 Неизменным остаётся только одно, как уже было сказано: *Более значимые свойства системы не должны зависеть от менее
 значимых.*
 
-...
 </Notes>
 
 ---
