docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -85,7 +85,7 @@ import template from "./diagrams/template.svg";
 ---
 
 <p style="font-size: 80px; text-align:center;">
-Для самостоятельного просмотра презентации Включите режим <i>Заметки докладчика</i>:
+Для самостоятельного просмотра презентации включите режим <i>Заметки докладчика</i>:
 </p>
 <p style="font-size: 80px; padding-bottom:40px;">
     <ul>
