--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -171,36 +171,43 @@ import template from "./diagrams/template.svg";
 
 ---
 
-# Mini FAQ
-
-У кого-то уже сейчас могут присутствовать  
-
-Сразу хочу снять возможнные тревожные ожидания и успокоить тех, у кого
-
-## Ради чего всё ?
-
-## Надолго ли это ?
-
-## Производительность ?
-
-### Накладные расходы ?
-
-## Frontend ?
+# Disclaimer
 
 <Notes>
+
+*Чистая Архитектура* не является серебряной пулей, она вряд ли подойдёт любителям хакатонов и рыцарям наколенноого
+кодинга.
+
+Она для тех, кто собирается "играть в долгую".
+
+А при игре в долгую всё становится на свои места. Чем больше функциональность разрастается и приобретает серьёзный
+масштаб, тем больше *Чистая Архитектура* выигрывает не только в эффективности разработки, но также и в эффективности
+времени выполнения программы, причём и по памяти, и по скорости. И особенно на фронтенде.
+
+</Notes>
+
+---
+
+# Mini FAQ
+
+- Для чего это всё ?
+- Надолго ли это ?
+- Накладные расходы ?
+- Производительность ?
+- Frontend ?
+
+<Notes>
+
+*Чистая Архитектура* это очень просто. Из всех её принципов наиболее значимых всего два.
+
+Главный из этих принципов здесь будет рассмотрен, после чего тревожные ожидания покинут тех, у кого они были, и многим
+наверняка захочется сразу же применить полученные знания на практике. 
 
 Сравнивать эффективность *Чистой Архитектуры* и наколенной разработки всё равно что сравнивать скорость спринтера и
 стайера, а точнее - велосипеда и поезда.
 
 При старте с места велосипед, конечно, выиграет на 100 метрах, может и на 200, может и на 1000. А на 100 км ? На 1000
 км ? На 10000 ?
-
-*Чистая Архитектура* не является серебряной пулей, она вряд ли подойдёт любителям хакатонов и рыцарям наколенноого
-кодинга.
-Она для тех, кто собирается "играть в долгую".
-А при игре в долгую всё становится на свои места. Чем больше функциональность разрастается и приобретает серьёзный
-масштаб, тем больше *Чистая Архитектура* выигрывает не только в эффективности разработки, но также и в эффективности
-времени выполнения программы, причём и по памяти, и по скорости. И особенно на фронтенде.
 
 </Notes>
 
