--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -32,6 +32,8 @@ import legoModules from "./diagrams/legoModules.png";
  
 import climbersBunch2 from "./diagrams/climbersBunch2.jpg";
 
+import bicycleVsTrain from "./diagrams/bicycleVsTrain.jpg";
+
 import caLayersDomain from "./diagrams/caLayersDomain.svg";
 import caLayersEntities from "./diagrams/caLayersEntities.svg";
 import caLayersUseCases from "./diagrams/caLayersUseCases.svg";
@@ -175,26 +177,52 @@ import template from "./diagrams/template.svg";
 
 <Notes>
 
-*Чистая Архитектура* не является серебряной пулей, она вряд ли подойдёт любителям хакатонов и рыцарям наколенноого
+*Чистая Архитектура* не является серебряной пулей, она вряд ли подойдёт любителям хакатонов и рыцарям наколенного
 кодинга.
-
-Она для тех, кто собирается "играть в долгую".
-
-А при игре в долгую всё становится на свои места. Чем больше функциональность разрастается и приобретает серьёзный
-масштаб, тем больше *Чистая Архитектура* выигрывает не только в эффективности разработки, но также и в эффективности
-времени выполнения программы, причём и по памяти, и по скорости. И особенно на фронтенде.
 
 </Notes>
 
 ---
 
-# Mini FAQ
+# Что с производительностью ?
 
-- Для чего это всё ?
-- Надолго ли это ?
-- Накладные расходы ?
-- Производительность ?
-- Frontend ?
+---
+
+<Image src={bicycleVsTrain} style={{ width: '60vw', height: '70vh'}}/>
+
+<Notes>
+
+С производительностью всё замечательно, просто нужно избегать некорректных сравнений.
+
+Например, сравнивать скорость системы, разработанной на хакатоне и системы, разработанной на принципах *Чистой
+Архитектуры* - всё равно что сравнивать скорость велосипеда и поезда при старте с места.
+
+Велосипед, конечно, выиграет на дистанции 100 метров. Выиграет и на 200, на 1000.
+
+Но уже на 10 км у велосипеда просто не будет никаких шансов.
+
+...
+</Notes>
+
+---
+<Image src={bicycleVsTrain} style={{ width: '60vw', height: '70vh'}}/>
+
+*Чистая Архитектура* нужна тем, кто собирается "играть в долгую".
+
+<Notes>
+...
+
+*Чистая Архитектура* нужна тем, кто собирается "играть в долгую".
+
+При игре в долгую всё становится на свои места. Чем больше функциональность разрастается и приобретает серьёзный
+масштаб, тем больше правила *Чистой Архитектуры* начинают выигрывать - вначале в скорости разработки, затем - в скорости
+старта - особенно на фронтенде, а затем "грязные" конкуренты попросту исчезают.
+
+</Notes>
+
+---
+
+# *Чистая Архитектура* это просто
 
 <Notes>
 
@@ -203,14 +231,7 @@ import template from "./diagrams/template.svg";
 Главный из этих принципов здесь будет рассмотрен, после чего тревожные ожидания покинут тех, у кого они были, и многим
 наверняка захочется сразу же применить полученные знания на практике. 
 
-Сравнивать эффективность *Чистой Архитектуры* и наколенной разработки всё равно что сравнивать скорость спринтера и
-стайера, а точнее - велосипеда и поезда.
-
-При старте с места велосипед, конечно, выиграет на 100 метрах, может и на 200, может и на 1000. А на 100 км ? На 1000
-км ? На 10000 ?
-
 </Notes>
-
 
 ---
 
@@ -788,6 +809,12 @@ Adapters*.
 ---
 
 # Как это выглядит в коде ?
+
+<Notes>
+
+Наконец, добрались до кода.
+
+</Notes>
 
 ---
 
