docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -180,6 +180,8 @@ import template from "./diagrams/template.svg";
 *Чистая Архитектура* не является серебряной пулей, она вряд ли подойдёт любителям хакатонов и рыцарям наколенного
 кодинга.
 
+Для справки, если совсем коротко: *Хакатон - разработка программы на время*
+
 </Notes>
 
 ---
