docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -180,7 +180,7 @@ import template from "./diagrams/template.svg";
 *Чистая Архитектура* не является серебряной пулей, она вряд ли подойдёт любителям хакатонов и рыцарям наколенного
 кодинга.
 
-Для справки, если совсем коротко: *Хакатон - разработка программы на время*
+Для справки, если совсем коротко: *хакатон - разработка программы на время*
 
 </Notes>
 
@@ -188,13 +188,21 @@ import template from "./diagrams/template.svg";
 
 # Что с производительностью ?
 
+<Notes>
+
+С производительностью всё замечательно.
+
+Но важно правильно выбирать условия её измерения и очень важно избегать некорректных сравнений.
+
+...
+</Notes>
+
 ---
 
 <Image src={bicycleVsTrain} style={{ width: '60vw', height: '70vh'}}/>
 
 <Notes>
-
-С производительностью всё замечательно, просто нужно избегать некорректных сравнений.
+...
 
 Например, сравнивать скорость системы, разработанной на хакатоне и системы, разработанной на принципах *Чистой
 Архитектуры* - всё равно что сравнивать скорость велосипеда и поезда при старте с места.
@@ -230,7 +238,7 @@ import template from "./diagrams/template.svg";
 
 *Чистая Архитектура* это очень просто. Из всех её принципов наиболее значимых всего два.
 
-Главный из этих принципов здесь будет рассмотрен, после чего тревожные ожидания покинут тех, у кого они были, и многим
+Главный из этих принципов будет здесь рассмотрен, после чего тревожные ожидания покинут тех, у кого они были, и многим
 наверняка захочется сразу же применить полученные знания на практике. 
 
 </Notes>
